--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,13 @@
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
-        }
+        },
+        {
+            "name": "Launch Chrome",
+            "request": "launch",
+            "type": "chrome",
+            "url": "https://localhost:4200",
+            "webRoot": "${workspaceFolder}"
+}
     ]
 }
